--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h1>This is the Show Page</h1>
 
-<h3><strong>Title:</strong> <%= @article.title %></h3>
+<h3><strong>Title:</strong> <%= @article.title.capitalize %></h3>
 
 <p>
-<strong>Description: <%= @article.description %></strong>
+<strong>Description:</strong> <%= @article.description %>
 </p>
