--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,6 +6,8 @@
       <th>Title</th>
       <th>Description</th>
       <th>Actions</th>
+      <th>Actions</th>
+      <th clospan = "3">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -15,9 +17,16 @@
     <tr>
       <td><%= t.title %></td>
       <td><%= t.description %></td>
-      <td>Placeholder</td>
+      <td><%= link_to "Show", article_path(t) %></td>
+      <td><%= link_to "Edit", edit_article_path(t) %></td>
+      <td><%= link_to "Delete", article_path(t),method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
 
     <%end%>
   </tbody>
+
 </table>
+
+<p>
+  <%= link_to "Create Article", new_article_path %>
+</p>
