--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,3 +5,8 @@
 <p>
 <strong>Description:</strong> <%= @article.description %>
 </p>
+
+
+<%= link_to "Edit", edit_article_path(@article) %> |
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %> |
+<%= link_to "Back", articles_path %>
