--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,31 +1,6 @@
 <h1>New Article</h1>
 
-<% if @article.errors.any? %>
-    <h2>The following errors arised</h2>
-    <ul>
-    <% @article.errors.full_messages.each do |err_msg|%>
-      <li><%= err_msg %></li>
-    <% end %>
-    </ul>
-<% end %>
-
-<%= form_with scope: :article, url: articles_path, local: true do |f|%>
-
-<p>
-  <%= f.label :title %>
-  <br>
-  <%= f.text_field :title %>
-</p>
-
-<p>
-  <%= f.label :description %>
-  <br>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-  <%= f.submit %>
-</p>
-<% end %>
+<%= render 'error_messages' %>
+<%= render 'form' %>
 
 <%= link_to "Go Back to article list", articles_path %>
