--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,7 @@
   </head>
 
   <body>
-    <% flash.each do |type, msg| %>
-      <%= msg %>
-    <% end %>
+    <%= render "layouts/messages"%>
     <%= yield %>
   </body>
 </html>
