--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th clospan = "3">Actions</th>
+      <th colspan = "3">Actions</th>
     </tr>
   </thead>
   <tbody>
