Add Styling and refactor code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>This is the Home Page</h1>
+<%= render 'jumbotron' %>
 
+<h1>This is the Home Page</h1>
 <%= link_to "Articles list", articles_path %> |
 <%= link_to "About Page", about_path %>
+
+
