--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,18 +1,38 @@
-<%= form_with(model: @article, local: true) do |f|%>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10  text-light">
+      <%= render 'shared/error_messages' %>
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f|%>
 
-<p>
-  <%= f.label :title %>
-  <br>
-  <%= f.text_field :title %>
-</p>
+      <div class="form-group row">
+        <%= f.label :title, class: "col-2 col-form-label" %>
+        <div class="col-10">
+        <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of the Article" %>
+        </div>
+      </div>
 
-<p>
-  <%= f.label :description %>
-  <br>
-  <%= f.text_area :description %>
-</p>
+      <div class="form-group row">
+        <%= f.label :description, class: "col-2 col-form-label" %>
+        <div class="col-10">
+        <%= f.text_area :description, rows: 5, class: "form-control shadow ronded", placeholder: "Description goes here..." %>
+        </div>
+      </div>
 
-<p>
-  <%= f.submit %>
-</p>
-<% end %>
+      <div class="container-fluid">
+        <div class= "form-group row justify-content-center">
+          <div class="col-6">
+          <%= f.submit class: "btn btn-outline-light btn-block"%>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-6">
+            <%= link_to "Cancel", articles_path, class: "btn btn-outline-danger btn-block" %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
