--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,35 @@
-<h1>Articles listing page</h1>
+  <h1 class="text-center mt-4">Listing All Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan = "3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
+  <div class="container my-3">
+    <div class="row justify-content-center">
+      <div class="col-6">
+
+        <%= link_to "Create Article", new_article_path, class: "btn btn-outline-primary btn-block" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
     <% @articles.each do |t| %>
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-8">
+        <div class="card text-center mt-2 shadow mb-5 bg-white rounded">
+          <div class="card-header">
+            <em>by Vignesh Kumar</em>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to t.title.capitalize, article_path(t), class: "text-success" %></h5>
+            <p class="card-text lead"><%= truncate(t.description, length: 100) %></p>
+            <%= link_to "View", article_path(t), class: "btn btn-outline-success"%>
+            <%= link_to "Edit", edit_article_path(t), class: "btn btn-outline-info"%>
+            <%= link_to "Delete", article_path(t), class: "btn btn-outline-danger", method: :delete%>
+          </div>
+          <div class="card-footer text-muted">
+            <small>Created <%= time_ago_in_words(t.created_at)%> ago, Edited <%= time_ago_in_words(t.updated_at) %> ago</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  </div>
 
-
-    <tr>
-      <td><%= t.title %></td>
-      <td><%= t.description %></td>
-      <td><%= link_to "Show", article_path(t) %></td>
-      <td><%= link_to "Edit", edit_article_path(t) %></td>
-      <td><%= link_to "Delete", article_path(t),method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-
-    <%end%>
-  </tbody>
-
-</table>
-
-<p>
-  <%= link_to "Create Article", new_article_path %>
-</p>
