--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New Article</h1>
+<div id="page-content">
+<h1 class="text-center mt-4">New Article</h1>
 
-<%= render 'error_messages' %>
 <%= render 'form' %>
 
-<%= link_to "Go Back to article list", articles_path %>
+</div>
