--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,22 @@
-<h1>This is the Show Page</h1>
+  <h2 class="text-center mt-4 text-success"><%= @article.title.capitalize%></h2>
 
-<h3><strong>Title:</strong> <%= @article.title.capitalize %></h3>
+  <div class="container">
 
-<p>
-<strong>Description:</strong> <%= @article.description %>
-</p>
-
-
-<%= link_to "Edit", edit_article_path(@article) %> |
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %> |
-<%= link_to "Back", articles_path %>
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-8">
+        <div class="card text-center mt-2 shadow mb-5 bg-white rounded">
+          <div class="card-header">
+            <em>by Vignesh Kumar</em>
+          </div>
+          <div class="card-body">
+            <div class="card-text lead text-left"><%= simple_format(@article.description) %></div>
+            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info"%>
+            <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete%>
+          </div>
+          <div class="card-footer text-muted">
+            <small>Created <%= time_ago_in_words(@article.created_at)%> ago, Edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
