--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,10 @@
-<% flash.each do |type, msg| %>
-      <%= msg %>
-    <% end %>
+<div class="container my-3">
+      <% flash.each do |type, msg| %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <%= msg %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+      <% end %>
+</div>
