--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <%= link_to "Articles list", articles_path, class: "dropdown-item"%>
-                  <%= link_to "New Article", new_article_path, class: "dropdown-item"%>
+                  <%= link_to "Create New Article", new_article_path, class: "dropdown-item"%>
                 </div>
               </li>
             </ul>
