--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
       <div class="col-12 col-md-10 col-lg-8">
         <div class="card text-center mt-2 shadow mb-5 bg-white rounded">
           <div class="card-header">
-            <em>by Vignesh Kumar</em>
+            <em>by <%= t.user.username %></em>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to t.title.capitalize, article_path(t), class: "text-success" %></h5>
