--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10  text-light">
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages',obj: @article %>
       <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f|%>
 
       <div class="form-group row">
