--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,8 @@
-      <% if @article.errors.any? %>
+      <% if obj.errors.any? %>
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          <h4 class="alert-heading">The following errors arised</h4>
+          <h4 class="alert-heading">The following errors prevented the <%= obj.class.name.downcase%> from being saved</h4>
           <ul>
-          <% @article.errors.full_messages.each do |err_msg|%>
+          <% obj.errors.full_messages.each do |err_msg|%>
             <li><%= err_msg %></li>
           <% end %>
           </ul>
