--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,27 +9,5 @@
     </div>
   </div>
 
-  <div class="container">
-    <% @articles.each do |t| %>
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-10 col-lg-8">
-        <div class="card text-center mt-2 shadow mb-5 bg-white rounded">
-          <div class="card-header">
-            <em>by <%= t.user.username %></em>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title"><%= link_to t.title.capitalize, article_path(t), class: "text-success" %></h5>
-            <p class="card-text lead"><%= truncate(t.description, length: 100) %></p>
-            <%= link_to "View", article_path(t), class: "btn btn-outline-success"%>
-            <%= link_to "Edit", edit_article_path(t), class: "btn btn-outline-info"%>
-            <%= link_to "Delete", article_path(t), class: "btn btn-outline-danger", method: :delete%>
-          </div>
-          <div class="card-footer text-muted">
-            <small>Created <%= time_ago_in_words(t.created_at)%> ago, Edited <%= time_ago_in_words(t.updated_at) %> ago</small>
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
-  </div>
+  <%= render 'article'%>
 
