--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,9 @@
       <div class="col-12 col-md-10 col-lg-8">
         <div class="card text-center mt-2 shadow mb-5 bg-white rounded">
           <div class="card-header">
-            <em>by <%= t.user.username %></em>
+            <% if t.user %>
+              <em>by <%= link_to t.user.username, user_path(t.user) %></em>
+            <% end %>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to t.title.capitalize, article_path(t), class: "text-success" %></h5>
