--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,5 +9,13 @@
     </div>
   </div>
 
+
+  <div class="flickr_pagination my-3">
+    <%= will_paginate @articles, :container => false %>
+  </div>
+
   <%= render 'article'%>
 
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate @articles, :container => false %>
+  </div>
