--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,12 @@
 <div id="page-content">
   <h1 class="text-center mt-4">Alpha-Bloggers</h1>
+
+  <div class="flickr_pagination my-3">
+    <%= will_paginate @users, :container => false %>
+  </div>
   <%= render 'bloggers'%>
+
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate @users, :container => false %>
+  </div>
 </div>
