--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,18 @@
 <div id="page-content">
   <h1 class="text-center mt-4"><%= @user.username%>'s Profile</h1>
   <%= gravatar_for @user, size: 200%>
+  <div class="text-center mt-4">
+    <%= link_to "Edit your Profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+  </div>
   <h3 class="text-center mt-4">Articles</h3>
+
+  <div class="flickr_pagination my-3">
+    <%= will_paginate @articles, :container => false %>
+  </div>
+
   <%= render 'articles/article' %>
+
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate @articles, :container => false %>
+  </div>
 </div>
