--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,12 @@
                   <%= link_to "Create New Article", new_article_path, class: "dropdown-item"%>
                 </div>
               </li>
+              <li class="nav-item">
+                <%= link_to "Login", login_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+              </li>
             </ul>
 
           </div>
