--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,8 +13,10 @@
           </div>
           <div class="card-body">
             <div class="card-text lead text-left"><%= simple_format(@article.description) %></div>
-            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info"%>
-            <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete%>
+            <% if logged_in? && @article.user == current_user %>
+              <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info"%>
+              <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete%>
+            <% end%>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(@article.created_at)%> ago, Edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
