--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,15 +18,33 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <%= link_to "Articles list", articles_path, class: "dropdown-item"%>
-                  <%= link_to "Create New Article", new_article_path, class: "dropdown-item"%>
+                  <% if logged_in?%>
+                    <%= link_to "Create New Article", new_article_path, class: "dropdown-item"%>
+                  <% end %>
                 </div>
               </li>
-              <li class="nav-item">
-                <%= link_to "Login", login_path, class: "nav-link" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
-              </li>
+              <% if logged_in? %>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Profile [<%= current_user.username %>]
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <%= link_to "View your Profile", user_path(current_user), class: "dropdown-item"%>
+                    <%= link_to "Edit your Profile", edit_user_path(current_user), class: "dropdown-item"%>
+                    <%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"}%>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+                </li>
+              <%else%>
+                <li class="nav-item">
+                  <%= link_to "Login", login_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Signup", signup_path, class: "nav-link" %>
+                </li>
+              <%end%>
             </ul>
 
           </div>
