--- a/app/views/users/_bloggers.html.erb
+++ b/app/views/users/_bloggers.html.erb
@@ -12,7 +12,9 @@
             </h5>
             <p class="card-text lead"><%= pluralize(user.articles.count, "article") %></p>
             <%= link_to "View", user, class: "btn btn-outline-success"%>
-            <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info"%>
+            <% if logged_in? && user == current_user %>
+              <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info"%>
+            <% end %>
           </div>
           <div class="card-footer text-muted">
             <small>Joined <%= time_ago_in_words(user.created_at)%> ago</small>
