--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
             <h5 class="card-title"><%= link_to t.title.capitalize, article_path(t), class: "text-success" %></h5>
             <p class="card-text lead"><%= truncate(t.description, length: 100) %></p>
             <%= link_to "View", article_path(t), class: "btn btn-outline-success"%>
-            <% if logged_in? && t.user == current_user %>
+            <% if logged_in? && (t.user == current_user || current_user.admin?) %>
               <%= link_to "Edit", edit_article_path(t), class: "btn btn-outline-info"%>
               <%= link_to "Delete", article_path(t), class: "btn btn-outline-danger", method: :delete%>
             <% end%>
