--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
           </div>
           <div class="card-body">
             <div class="card-text lead text-left"><%= simple_format(@article.description) %></div>
-            <% if logged_in? && @article.user == current_user %>
+            <% if logged_in? && (@article.user == current_user || current_user.admin? ) %>
               <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info"%>
               <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete%>
             <% end%>
